--- a/src/app/shared/dialogs/add-grn/add-supplier/add-supplier.component.html
+++ b/src/app/shared/dialogs/add-grn/add-supplier/add-supplier.component.html
@@ -1,5 +1,5 @@
 <form *ngIf="this.form" [formGroup]="this.form" (ngSubmit)="onSubmit()" autocomplete="off">
-  <div mat-dialog-content>
+  <div mat-dialog-content class="mobile-device-top-padding">
     <!-- Receipt Number and Receipt Date Fields -->
     <div class="row">
       <div class="col-md-3 col-xs-6 display-flex align-items-center receipt-number">
