--- a/src/app/features/grn/grn.component.html
+++ b/src/app/features/grn/grn.component.html
@@ -1,4 +1,4 @@
-<div class="page-start-point p-rem-t-10 p-rem-r-5 receipts-outer-section">
+<div class="page-start-point p-rem-t-10 p-rem-r-5 receipts-outer-section common-padding-mobile">
   <form *ngIf="allProjects" [formGroup]="form">
     <div class="row" class="users-dashboard p-b-20 min-height parent report">
       <!-- In case of WEB View - design for search Projects, Supplier, Generate Report and amount  -->
