--- a/src/app/features/rfq/rfq-view/rfq-view.component.html
+++ b/src/app/features/rfq/rfq-view/rfq-view.component.html
@@ -1,79 +1,75 @@
 <!-- <fix-header></fix-header> -->
 
-<div class="page-start-point mt-5 p-rem-t-15" *ngIf="rfqDetails">
+<div class="page-start-point mt-5 p-rem-t-5" *ngIf="rfqDetails">
   <div class="create-po-dashboard p-b-20 min-height parent">
-    <div class="row m-b-10">
-      <div class="col-md-12">
-        <!-- first row -->
-        <div class="row p-t-20">
-          <div class="col-xs-6 col-md-4" [ngClass]="isMobile ? 'fontsize-14-px' : ''">
-            <div class="p-t-10">
-              <label class="text-bold" [ngClass]="isMobile ? 'd-block mb-1' : ''">RFP Name: </label>
-              {{ rfqDetails.rfqName }}
-            </div>
-          </div>
-          <div class="col-xs-6 col-md-4 p-t-10 text-left" [ngClass]="isMobile ? 'fontsize-14-px' : ''">
-            <label class="text-bold" [ngClass]="isMobile ? 'd-block mb-1' : ''">RFP End Date: </label>
-            {{ rfqDetails.dueDate | date: "dd-MMM-yyy" }}
-          </div>
-          <div
-            class="col-xs-12 p-l-0 p-t-10 p-b-25 text-right"
-            [ngClass]="isMobile ? 'mt-2' : ''"
-            *ngIf="rfqDetails.rfqCurrency != null && rfqDetails.rfqCurrency.exchangeCurrencyName != null"
-          >
-            <span class="base-currency p-l-5 p-r-5 p-t-10 p-b-10">
-              <span class="font-size-vary-grn color-grey">
-                <img width="25px" *ngIf="rfqDetails.rfqCurrency.exchangeCurrencyFlag" [src]="rfqDetails.rfqCurrency.exchangeCurrencyFlag" />
-                {{ rfqDetails.rfqCurrency.exchangeCurrencyName }}
-              </span>
-              <span class="p-l-5"> = </span>
-              <span class="p-l-5 color-6d6a6a color-grey"> {{ rfqDetails.rfqCurrency.exchangeValue }} </span>
-              <span class="p-l-5 color-grey">
-                <img width="25px" *ngIf="rfqDetails.rfqCurrency.primaryCurrencyFlag" [src]="rfqDetails.rfqCurrency.primaryCurrencyFlag" />
-                {{ rfqDetails.rfqCurrency.primaryCurrencyName }}
-              </span>
+    
+    <div class="row">
+      <div class="col-xs-6 col-md-4" [ngClass]="isMobile ? 'fontsize-14-px' : ''">
+        <div class="p-t-10">
+          <label class="text-bold" [ngClass]="isMobile ? 'd-block mb-1' : ''">RFP Name: </label>
+          {{ rfqDetails.rfqName }}
+        </div>
+      </div>
+      <div class="col-xs-6 col-md-4 p-t-10 text-left" [ngClass]="isMobile ? 'fontsize-14-px' : ''">
+        <label class="text-bold" [ngClass]="isMobile ? 'd-block mb-1' : ''">RFP End Date: </label>
+        {{ rfqDetails.dueDate | date: "dd-MMM-yyy" }}
+      </div>
+      <div
+        class="col-xs-12 p-l-0 p-t-10 p-b-25 text-right"
+        [ngClass]="isMobile ? 'mt-2' : ''"
+        *ngIf="rfqDetails.rfqCurrency != null && rfqDetails.rfqCurrency.exchangeCurrencyName != null"
+      >
+        <span class="base-currency p-l-5 p-r-5 p-t-10 p-b-10">
+          <span class="font-size-vary-grn color-grey">
+            <img width="25px" *ngIf="rfqDetails.rfqCurrency.exchangeCurrencyFlag" [src]="rfqDetails.rfqCurrency.exchangeCurrencyFlag" />
+            {{ rfqDetails.rfqCurrency.exchangeCurrencyName }}
+          </span>
+          <span class="p-l-5"> = </span>
+          <span class="p-l-5 color-6d6a6a color-grey"> {{ rfqDetails.rfqCurrency.exchangeValue }} </span>
+          <span class="p-l-5 color-grey">
+            <img width="25px" *ngIf="rfqDetails.rfqCurrency.primaryCurrencyFlag" [src]="rfqDetails.rfqCurrency.primaryCurrencyFlag" />
+            {{ rfqDetails.rfqCurrency.primaryCurrencyName }}
+          </span>
+        </span>
+        <div class="display-inline-block p-l-5">
+          <span *ngIf="rfqDetails.rfqCurrency != null && rfqDetails.rfqCurrency.exchangeCurrencyName != null" class="p-l-5 info-icon info-tootip"
+            ><img src="./../../../../assets/images/i_icon.png" class="img-responsive" />
+            <span class="info-tootip__content rt-0">
+              <div class="tooltip-table ml-0" [ngClass]="isMobile ? 'mr-2 p-10 fontsize-14-px' : ''">
+                <div class="row text-center color-grey text-semi-bold p-l-5 p-r-5">Supplier will have to submit the quote in this selected currency</div>
+              </div>
             </span>
-            <div class="display-inline-block p-l-5">
-              <span *ngIf="rfqDetails.rfqCurrency != null && rfqDetails.rfqCurrency.exchangeCurrencyName != null" class="p-l-5 info-icon info-tootip"
-                ><img src="./../../../../assets/images/i_icon.png" class="img-responsive" />
-                <span class="info-tootip__content rt-0">
-                  <div class="tooltip-table ml-0" [ngClass]="isMobile ? 'mr-2 p-10 fontsize-14-px' : ''">
-                    <div class="row text-center color-grey text-semi-bold p-l-5 p-r-5">Supplier will have to submit the quote in this selected currency</div>
-                  </div>
-                </span>
-              </span>
-            </div>
+          </span>
+        </div>
+      </div>
+
+      <!-- <div class="col-md-3 p-t-10 main-color">
+                    <button mat-button class="pull-right fontsize-14-px"
+                        (click)="openDialog1(rfqDetails.documentsList, rfqDetails.terms)">
+                        View Terms & Conditions/Documents
+                    </button>
+                </div> -->
+    </div>
+
+    <!-- second row -->
+    <div class="row m-b-20">
+      <div class="supplier-list-rfq-view col-md-3 main-flex" *ngFor="let supplier of rfqDetails.supplierDetails; let i = index">
+        <mat-card class="w-100">
+          <div class="col-md-12 text-bold supplier-company">
+            <label for="company " class="word-break-all">{{ supplier.supplierName }}</label>
           </div>
 
-          <!-- <div class="col-md-3 p-t-10 main-color">
-                        <button mat-button class="pull-right fontsize-14-px"
-                            (click)="openDialog1(rfqDetails.documentsList, rfqDetails.terms)">
-                            View Terms & Conditions/Documents
-                        </button>
-                    </div> -->
-        </div>
+          <span class="d-block supplier-rates ml-1">
+            <view-rating [supplierId]="supplier.supplierId" [ratings]="supplier.supplierRating"></view-rating>
+          </span>
 
-        <!-- second row -->
-        <div class="row m-b-10">
-          <div class="supplier-list-rfq-view col-md-3 main-flex" *ngFor="let supplier of rfqDetails.supplierDetails; let i = index">
-            <mat-card class="w-100">
-              <div class="col-md-12 text-bold supplier-company">
-                <label for="company " class="word-break-all">{{ supplier.supplierName }}</label>
-              </div>
-
-              <span class="d-block supplier-rates ml-1">
-                <view-rating [supplierId]="supplier.supplierId" [ratings]="supplier.supplierRating"></view-rating>
-              </span>
-
-              <div class="col-md-12">
-                <label for="email" class="word-break-all">{{ supplier.email }}</label>
-              </div>
-              <div class="col-md-12">
-                <label for="phoneNumber" class="word-break-all"> {{ supplier.countryCallingCode }}-{{ supplier.contactNo }} </label>
-              </div>
-            </mat-card>
+          <div class="col-md-12">
+            <label for="email" class="word-break-all">{{ supplier.email }}</label>
           </div>
-        </div>
+          <div class="col-md-12">
+            <label for="phoneNumber" class="word-break-all"> {{ supplier.countryCallingCode }}-{{ supplier.contactNo }} </label>
+          </div>
+        </mat-card>
       </div>
     </div>
 
