--- a/src/app/features/users/user-details/user-details.component.html
+++ b/src/app/features/users/user-details/user-details.component.html
@@ -1,4 +1,4 @@
-<div class="page-start-point p-rem-t-40">
+<div class="page-start-point">
   <ng-container *ngIf="(dataSourceActivateTemp == null || dataSourceActivateTemp.length == 0) && (dataSourceDeactivateTemp == null || dataSourceDeactivateTemp.length == 0)">
     <div class="p-l-20 p-r-20 p-b-20 min-height parent wrapper-btn-center">
       <div class="add-user-img">
@@ -33,14 +33,12 @@
       <ng-container *ngIf="dataSourceActivateTemp.length > 0" class="user-dts">
         <mat-expansion-panel class="myPanel" [expanded]="true">
           <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'">
-            <div class="row">
-              <div class="col-sm-12">
-                <span>Active Users</span>
-              </div>
-            </div>
+            <mat-panel-title>
+                Active Users
+            </mat-panel-title>
           </mat-expansion-panel-header>
 
-          <div class="add-user-container mat-elevation-z8 user-details-table-div-active-inactive-single">
+          <div class="add-user-container mat-elevation-z8">
             <table mat-table [dataSource]="dataSourceActivate">
               <!-- User name Column -->
               <ng-container matColumnDef="User Name">
@@ -146,14 +144,12 @@
       <ng-container *ngIf="dataSourceDeactivateTemp && dataSourceDeactivateTemp.length > 0" class="user-dts">
         <mat-expansion-panel class="myPanel m-t-10" [expanded]="true">
           <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'">
-            <div class="row">
-              <div class="col-sm-12">
-                <span>Deactivated Users</span>
-              </div>
-            </div>
+            <mat-panel-title>
+                Deactivated Users
+            </mat-panel-title>
           </mat-expansion-panel-header>
 
-          <div class="add-user-container mat-elevation-z8 user-details-table-div-active-inactive-single">
+          <div class="add-user-container mat-elevation-z8">
             <table mat-table [dataSource]="dataSourceDeactivate">
               <!-- User name Column -->
               <ng-container matColumnDef="User Name">
