--- a/src/app/shared/dialogs/delete-my-material-confirmation/delete-myMaterial-confirmation.component.html
+++ b/src/app/shared/dialogs/delete-my-material-confirmation/delete-myMaterial-confirmation.component.html
@@ -1,20 +1,24 @@
-<div class="header-add-edit-dialog">
-  <h1 mat-dialog-title>Confirmation</h1>
-  <button type="button" class="close" (click)="close()" aria-label="Close">
-    <span aria-hidden="true">×</span>
-  </button>
-</div>
-<div mat-dialog-content class="padding-for-dialog-after-header">
-  <p class="text-center">Are you sure you want to delete this material?</p>
-</div>
-
-<div mat-dialog-actions>
-  <div class="col-sm-12 save-btn-add-edit-user-modal">
-    <button mat-raised-button (click)="close()" class="main-color main-button pull-left">
-      Cancel
-    </button>
-    <button mat-raised-button (click)="delete()" class="main-background-color main-button color-white pull-right">
-      Delete
+<section class="modal-outer">
+  <div class="modal-header">
+    <h5 mat-dialog-title class="mb-0">Confirmation</h5>
+    <button type="button" class="close" (click)="close()" aria-label="Close">
+      <span aria-hidden="true">×</span>
     </button>
   </div>
-</div>
+
+  <div mat-dialog-content>
+
+    <div class="modal-body">
+
+      <p class="text-center m-b-0">Are you sure you want to delete this material?</p>
+
+      <div mat-dialog-actions>
+        <div class="col-sm-12 save-btn-add-edit-user-modal">
+          <button mat-raised-button (click)="close()" class="main-color main-button pull-left">Cancel</button>
+          <button mat-raised-button (click)="delete()" class="main-background-color main-button color-white pull-right">Delete</button>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
