--- a/src/app/shared/dialogs/edit-my-material/edit-my-material.component.html
+++ b/src/app/shared/dialogs/edit-my-material/edit-my-material.component.html
@@ -1,100 +1,69 @@
-<div class="row">
-  <div class="col-xs-12 header-border p-t-10">
-    <div class="row">
-      <div class="col-xs-10">
-        <h1 mat-dialog-title>{{ data.type === "edit" ? "Edit Material" : "Add To My Material" }}</h1>
-      </div>
-      <div class="col-xs-2">
-        <button type="button" class="close pull-right p-t-5" (click)="closeDialog()" aria-label="Close">
-          <span aria-hidden="true">×</span>
-        </button>
-      </div>
-    </div>
+<section class="modal-outer">
+  <div class="modal-header">
+    <h5 mat-dialog-title class="mb-0">{{ data.type === "edit" ? "Edit Material" : "Add To My Material" }}</h5>
+
+    <button type="button" class="close" (click)="closeDialog()" aria-label="Close">
+      <span aria-hidden="true">×</span>
+    </button>
   </div>
-  <mat-divider></mat-divider>
-  <div class="container">
-    <form *ngIf="data" [formGroup]="editMaterialForm" (ngSubmit)="submit()">
-      <div class="row my-material-dialog-length">
-        <div formArrayName="forms" class="width-100" *ngFor="let myMaterial of data.materialList; let i = index">
-          <div class="row p-t-10" [formGroupName]="i">
-            <div class="col-xs-3">
-              <mat-form-field class="border-input width-90">
-                <input type="text" placeholder="Material Name*" matInput formControlName="materialName" />
-                <small *ngIf="editMaterialForm.get('forms')['controls'][i]['controls']['materialName'].errors?.maxlength" class="warning-color"
-                  >maximum characters allowed is 300</small
-                >
-              </mat-form-field>
-              <!-- <mat-form-field class="width-90 mat-form-field-padding" style="padding-top: 3px;">
-                <mat-label>*Material Name</mat-label>
-                <textarea matInput formControlName="materialName" class="text-area-border"></textarea>
-              </mat-form-field> -->
-              <!-- <mat-error *ngIf="myMaterial.controls['email'].hasError('required') && myMaterial.controls['email'].touched">
-                  Email is required
-                </mat-error> -->
-              <!-- myMaterial.controls.myMaterial.controls.email.errors -->
-            </div>
-            <div class="col-xs-2 text-right p-l-0 p-r-0">
-              <mat-form-field class="border-select width-90 mat-form-field-flex-mm-padding">
-                <mat-select placeholder="*Unit" formControlName="materialUnit">
-                  <div class="display-flex">
-                    <input
-                      class="p-l-10 p-b-5"
-                      matInput
-                      type="search"
-                      placeholder="Search Unit"
-                      [(ngModel)]="searchUnit"
-                      [ngModelOptions]="{standalone: true}"
-                      (keydown)="$event.stopPropagation()"
-                    />
-                    <button mat-button mat-icon-button>
-                      <mat-icon>search</mat-icon>
-                    </button>
-                  </div>
-                  <mat-option *ngFor="let unit of materialUnit | SearchPipe: searchUnit" [value]="unit">
-                    <span>
-                      {{ unit }}
-                    </span>
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
-            <div class="col-xs-4 text-center">
-              <span>
-                <mat-form-field class="border-select width-90 mat-form-field-flex-mm-padding">
-                  <input type="text" placeholder="Trade" matInput formControlName="trade" />
 
-                  <!-- <mat-select placeholder="Trade" formControlName="trade">
-                    <mat-option *ngFor="let trade of tradesList" [value]="trade">
-                      <span>
-                        {{ trade.tradeName }}
-                      </span>
-                    </mat-option>
-                  </mat-select> -->
-                </mat-form-field>
-              </span>
-            </div>
-            <div class="col-xs-3 text-center">
-              <span>
-                <mat-form-field class="border-select width-90 mat-form-field-flex-mm-padding">
-                  <input type="text" placeholder="Category" matInput formControlName="category" />
-                </mat-form-field>
+  <div mat-dialog-content>
+    <div class="modal-body">
+      <form *ngIf="data" [formGroup]="editMaterialForm" (ngSubmit)="submit()">
+        <div class="row my-material-dialog-length">
+          <div formArrayName="forms" class="width-100" *ngFor="let myMaterial of data.materialList; let i = index">
 
-                <!-- <mat-form-field class="border-select width-90 mat-form-field-flex-mm-padding">
-                  <mat-select placeholder="Category" formControlName="category">
-                    <mat-option *ngFor="let option of this.filteredOption" [value]="option" matTooltip=" {{ option.categoriesName }}">
-                      <span> {{ option.categoriesName }}</span>
+            <div class="row" [formGroupName]="i">
+
+              <div class="col-md-4 col-sm-6 col-xs-12">
+                <mat-form-field class="border-input width-100">
+                  <input type="text" placeholder="Material Name*" matInput formControlName="materialName" />
+                  <small *ngIf="editMaterialForm.get('forms')['controls'][i]['controls']['materialName'].errors?.maxlength" class="warning-color">
+                    maximum characters allowed is 300
+                  </small>
+                </mat-form-field>
+              </div>
+
+              <div class="col-md-2 col-sm-6 col-xs-12">
+                <mat-form-field class="border-select width-100 mat-form-field-flex-mm-padding">
+                  <mat-select placeholder="*Unit" formControlName="materialUnit">
+                    <div class="display-flex">
+                      <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Unit" [(ngModel)]="searchUnit"
+                        [ngModelOptions]="{standalone: true}" (keydown)="$event.stopPropagation()"/>
+                      <button mat-button mat-icon-button>
+                        <mat-icon>search</mat-icon>
+                      </button>
+                    </div>
+
+                    <mat-option *ngFor="let unit of materialUnit | SearchPipe: searchUnit" [value]="unit">
+                      <span>{{ unit }}</span>
                     </mat-option>
                   </mat-select>
-                </mat-form-field> -->
-              </span>
+                </mat-form-field>
+              </div>
+
+              <div class="col-md-3 col-sm-6 col-xs-12">
+                  <mat-form-field class="border-select width-100 mat-form-field-flex-mm-padding">
+                    <input type="text" placeholder="Trade" matInput formControlName="trade" />
+                  </mat-form-field>
+              </div>
+
+              <div class="col-md-3 col-sm-6 col-xs-12">
+                  <mat-form-field class="border-select width-100 mat-form-field-flex-mm-padding">
+                    <input type="text" placeholder="Category" matInput formControlName="category" />
+                  </mat-form-field>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+  
+        <div mat-dialog-actions>
+          <div class="col-xs-12 p-t-20 p-b-20 text-center">
+            <button class="btn btn-warning next-btn">Save</button>
+          </div>
+        </div>
 
-      <div class="text-right col-xs-12 mt-4">
-        <button class="btn btn-warning next-btn">Save</button>
-      </div>
-    </form>
+      </form>
+    </div>
   </div>
-</div>
+</section>
