--- a/src/assets/scss/pages/rfq-bids.component.scss
+++ b/src/assets/scss/pages/rfq-bids.component.scss
@@ -1,22 +1,8 @@
 @import "../base/variables.scss";
 
 .customBid {
-  .mat-expansion-panel-header.mat-expanded:focus,
-  .mat-expansion-panel-header.mat-expanded:hover {
-    background-color: rgba(169, 174, 188, 0.21) !important;
-  }
-
   .mat-expansion-panel-header {
-    background-color: rgba(169, 174, 188, 0.21) !important;
-  }
-
-  .mat-accordion .mat-header-row {
-    padding-right: 2rem;
-    border-bottom: none;
-  }
-
-  .mat-expansion-panel-header.mat-row {
-    border-bottom: none;
+    background-color: #ffffff !important;
   }
 
   .mat-table {
@@ -25,7 +11,6 @@
 
   .mat-header-row {
     background: #2297bb;
-
     span {
       color: #ffffff !important;
     }
@@ -43,7 +28,6 @@
     flex: 1;
     overflow: hidden;
     word-wrap: break-word;
-    color: black;
   }
 
   input.quantity {
@@ -51,8 +35,29 @@
   }
 
   .mat-expansion-panel-body {
-    padding-left: 0px !important;
-    padding-right: 0px !important;
+    padding: 0px !important;
+  }
+
+  .material-details-row{
+    background-color: #eeeeee;
+  }
+
+  .supplier-details-row, .material-details-row{
+    border-bottom: 1px solid #bbbbbb;
+  }
+
+  .makes-details-row{
+    td.mat-cell:first-of-type{
+      padding-left: 0px !important;
+    }
+
+    td.mat-cell:last-of-type{
+      padding-right: 0px !important;
+    }
+  }
+
+  .supplier-details-row{
+    height: 45px !important;
   }
 
   ::-webkit-input-placeholder {
@@ -70,10 +75,6 @@
       color: #5f5f5f;
       font-weight: 500;
     }
-  }
-
-  .mat-expansion-panel:hover {
-    background-color: rgba(169, 174, 188, 0.21);
   }
 
   .supplierLevel:focus,
@@ -98,17 +99,6 @@
     border-top: none;
   }
 
-  .mat-accordion .mat-expansion-panel-header,
-  .rfqbid-header-color {
-    background: rgba(169, 174, 188, 0.21) !important;
-    border: 1px solid #979797;
-    color: #707070;
-  }
-
-  .mat-accordion .mat-expansion-panel-header {
-    min-height: 50px;
-  }
-
   .w-12 {
     max-width: 12%;
     flex-basis: 12%;
@@ -123,10 +113,6 @@
   .mat-row .mat-cell {
     min-width: 80px;
   }
-}
-
-.rfqbid-header-color {
-  background-color: (169, 174, 188, 0.21) !important;
 }
 
 .mat-horizontal-stepper-content {
@@ -471,6 +457,10 @@ tr.tbl-body-cols.mat-row {
   .supplier-rate-col-bid {
     max-width: 15% !important;
   }
+}
+
+@media only screen and (max-width: 767px){
+  
 }
 
 @media only screen and (max-width: 767px) and (min-width: 600px){
